@@ -3,9 +3,12 @@
 #' Extracted signatures are compared against 30 experimentally validated signatures by calculating cosine similarity. See http://cancer.sanger.ac.uk/cosmic/signatures for details.
 #'
 #' @param mat Input matrix of diemnsion nx96 generated by \code{\link{trinucleotideMatrix}}
+#' @param nMin Minimum number of signatures to try. Default 2.
 #' @param nTry Maximum number of signatures to try. Default 6.
+#' @param nrun numeric giving the number of run to perform for each value in range. Default 5
 #' @param plotBestFitRes plots consensus heatmap for range of values tried. Default FALSE
 #' @param parallel Default 4. Number of cores to use.
+#' @param verbose Default TRUE
 #' @param pConstant A small positive value to add to the matrix. Use it ONLY if the functions throws an \code{non-conformable arrays} error
 #' @return a list with \code{NMF.rank} object and summary stats.
 #' @examples
@@ -17,7 +20,16 @@
 #' @importFrom grDevices pdf boxplot.stats dev.off
 #' @seealso \code{\link{plotCophenetic}} \code{\link{extractSignatures}} \code{\link{trinucleotideMatrix}}
 #' @export
-estimateSignatures = function(mat, nTry = 6, parallel = 4, pConstant = NULL, plotBestFitRes = FALSE){
+estimateSignatures = function(mat, nMin = 2, nTry = 6, nrun = 10, parallel = 4, pConstant = NULL, verbose = TRUE, plotBestFitRes = FALSE){
+
+
+  if(nMin >= nTry){
+    stop("nMin should be less than nTry")
+  }
+
+  if(nMin < 2){
+    stop("nMin should atleast be 2")
+  }
 
   #suppressPackageStartupMessages(require(NMF, quietly = TRUE))
   #transpose matrix
@@ -49,9 +61,9 @@ estimateSignatures = function(mat, nTry = 6, parallel = 4, pConstant = NULL, plo
 
   cat(paste0('-Running NMF for ', nTry, ' ranks\n'))
   if(!is.null(parallel)){
-    nmfTry = NMF::nmfEstimateRank(mat, seq(2,nTry), method='brunet', nrun=10, seed=123456, .opt = paste0('P', parallel)) #try nmf for a range of values
+    nmfTry = NMF::nmfEstimateRank(mat, seq(nMin,nTry), method='brunet', nrun = nrun, seed = 123456, .opt = paste0('P', parallel), verbose = verbose) #try nmf for a range of values
   }else{
-    nmfTry = NMF::nmfEstimateRank(mat, seq(2,nTry), method='brunet', nrun=10, seed=123456) #try nmf for a range of values
+    nmfTry = NMF::nmfEstimateRank(mat, seq(nMin,nTry), method='brunet', nrun = nrun, seed = 123456, verbose = verbose) #try nmf for a range of values
   }
 
   if(plotBestFitRes){
