@@ -4,17 +4,31 @@
 \alias{estimateSignatures}
 \title{Estimate number of signatures based on cophenetic correlation metric}
 \usage{
-estimateSignatures(mat, nTry = 6, parallel = 4, pConstant = NULL,
-  plotBestFitRes = FALSE)
+estimateSignatures(
+  mat,
+  nMin = 2,
+  nTry = 6,
+  nrun = 10,
+  parallel = 4,
+  pConstant = NULL,
+  verbose = TRUE,
+  plotBestFitRes = FALSE
+)
 }
 \arguments{
 \item{mat}{Input matrix of diemnsion nx96 generated by \code{\link{trinucleotideMatrix}}}
 
+\item{nMin}{Minimum number of signatures to try. Default 2.}
+
 \item{nTry}{Maximum number of signatures to try. Default 6.}
+
+\item{nrun}{numeric giving the number of run to perform for each value in range. Default 5}
 
 \item{parallel}{Default 4. Number of cores to use.}
 
 \item{pConstant}{A small positive value to add to the matrix. Use it ONLY if the functions throws an \code{non-conformable arrays} error}
+
+\item{verbose}{Default TRUE}
 
 \item{plotBestFitRes}{plots consensus heatmap for range of values tried. Default FALSE}
 }
