@@ -2,6 +2,7 @@ CHANGES IN VERSION 2.2.10
 -------------------------
 BUG FIX
     o Improvised somaticInteractions. Better plot and displays countsIssue: #418, #420
+    o Improvised estimateSignatures function Issue: #433
 
 CHANGES IN VERSION 2.2.0
 -------------------------
